# rewrite-agent-demo

./: .gitignore  .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
clients/streamlit_ui/: README.md  __init__.py  app.py  mock_data.py
clients/streamlit_ui/.streamlit/: config.toml
clients/streamlit_ui/components/: __init__.py  chat_area.py  header.py  process_viewer.py  sidebar.py
clients/streamlit_ui/styles/: __init__.py  main_style.py  sidebar_style.py
clients/streamlit_ui/tests/: test_components.py
clients/streamlit_ui/utils/: session.py
specs/001-clients-streamlit-ui/: spec.md
specs/001-clients-streamlit-ui/checklists/: requirements.md
src/: wp_client.py
src/config/: env_config.py
src/tools/wordpress/: wp_client.py  wp_tools.py
src/wordpress/: schemas.py  wp_client.py
src/wordpress/mcp/: server.py
src/wordpress/tools/: tool_manager.py
test/: test_wp_client.py
test/config/: test_env_config.py
test/wordpress/: test_wp_mcp_server.py
